spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ nav .social-link:last-of-type {
   color: #263d49;
   font-size: 17px;
   line-height: 1.6;
-  margin-bottom: 36px;
+  margin-bottom: 30px;
 }
 
 .hero-text {
@@ -500,7 +500,7 @@ footer a {
   }
 
   .button {
-    margin-top: 38px;
+    margin-top: 35px;
   }
 
   .left {
